@@ -1,4 +1,4 @@
-# last modified 27 June 2011 by J. Fox
+# last modified 22 July 2011 by J. Fox
 
 .onAttach <- function(...){
     if(interactive()) Commander()
@@ -26,7 +26,7 @@
     tcltk <- require(tcltk)
     if (!tcltk) stop(gettext("The tcltk package is absent. The R Commander cannot function.", domain="R-Rcmdr"))
     required.packages <- rev(c("abind", "aplpack", "car", "colorspace", 
-		"effects", "foreign", "grid", "Hmisc", "lattice", "leaps", "lmtest",
+		"effects", "e1071", "foreign", "grid", "Hmisc", "lattice", "leaps", "lmtest",
         "MASS", "mgcv", "multcomp", "nlme", "nnet", "relimp", "rgl"))
     if (.Platform$OS.type == "windows") required.packages <- c(required.packages, "RODBC")
     packages.to.load <- options("Rcmdr")[[1]]$load.at.startup
